force-app/main/default/objects/Spare_Part_Stock__c.object
<CustomObject>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MatetialPlant__c</fullName>
        <externalId>true</externalId>
        <label>MatetialPlant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Spare Part Stocks</relationshipLabel>
        <relationshipName>Spare_Part_Stocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spare_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spare Part</label>
        <referenceTo>Spare_Part__c</referenceTo>
        <relationshipLabel>Spare Part Stocks</relationshipLabel>
        <relationshipName>Spare_Part_Stocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Spare Part Stock</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Available_Quantity__c</columns>
        <columns>Plant__c</columns>
        <columns>Spare_Part__c</columns>
        <columns>MatetialPlant__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plant__c</field>
            <operation>equals</operation>
            <value>8200</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Spare Part Stock Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>